crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/022.cypher
MATCH (n) RETURN n;/* comment */MATCH (m) RETURN m
